# korea-statistic-MCP-cginside

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  fly.toml.example  kosis_charts_extra.py  kosis_curation.py  kosis_http_server.py  kosis_mcp_server.py  mcp_config.example.json  package.json  pyproject.toml  render.yaml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
docs/: chatbot_integration.md  gemma_manifest.default.json
kosis_analysis/: __init__.py  answering.py  charts.py  client.py  indicators.py  metadata.py  periods.py  planner.py  quick.py
scripts/: analyze_kosis_metadata_patterns.py  audit_note_vs_call.py  audit_period_meta.py  comprehensive_api_matrix.py  eval_adversarial_plan.py  eval_evidence_bundle.py  eval_gemma_workflow.py  eval_plan_query_pipeline.py  eval_tool_contracts.py  exploratory_questions.py  explore_expansion_set.py  explore_industry_axes.py  explore_legislative_winners.py  explore_remaining_candidates.py  natural_language_battery.py  npm-postinstall.js  regression_smoke.py  search_legislative_domains.py  temporal_edge_cases.py  test_new_14.py  validate_expansion_candidates.py  verify_external.py
skills/kosis-statistics/: SKILL.md
